--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-toastify": "^4.2.0",
+    "react-toasts": "^2.0.13",
     "redux": "^4.0.0",
     "redux-promise-middleware": "^5.1.1"
   },
