--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "massive": "^5.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-live-clock": "^2.0.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
