--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.4.2",
     "react-live-clock": "^2.0.3",
     "react-redux": "^5.0.7",
+    "react-responsive-modal": "^3.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-toastify": "^4.2.0",
