--- a/package.json
+++ b/package.json
@@ -29,7 +29,14 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": {
+    "/auth/callback": {
+      "target": "http://localhost:3001"
+    },
+    "/api": {
+      "target": "http://localhost:3001"
+    }
+  },
   "nodemonCongig": {
     "ext": "js.sql",
     "ignore": [
