--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-session": "^1.15.6",
     "massive": "^5.2.0",
     "react": "^16.4.2",
+    "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.2",
     "react-hamburger-menu": "^1.1.1",
     "react-live-clock": "^2.0.3",
@@ -18,6 +19,7 @@
     "react-responsive-modal": "^3.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-switch-button": "^2.3.5",
     "react-toastify": "^4.2.0",
     "react-toasts": "^2.0.13",
     "redux": "^4.0.0",
