--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "massive": "^5.2.0",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
+    "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.2",
     "react-hamburger-menu": "^1.1.1",
     "react-live-clock": "^2.0.3",
@@ -41,6 +42,7 @@
   },
   "nodemonCongig": {
     "ext": "js.sql",
+    "watch": "server",
     "ignore": [
       "src/*",
       "public/*"
