--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-toasts": "^2.0.13",
     "react-toggle-switch": "^3.0.4",
     "redux": "^4.0.0",
-    "redux-promise-middleware": "^5.1.1"
+    "redux-promise-middleware": "^5.1.1",
+    "simple-react-timer": "^0.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
