Comment field styled well for desktop, need to make all responsive. Down arrow shows more results, no scrolling yet

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.2",
     "react-hamburger-menu": "^1.1.1",
+    "react-lazy-load": "^3.0.13",
     "react-live-clock": "^2.0.3",
     "react-redux": "^5.0.7",
     "react-responsive-modal": "^3.2.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-scroll-to-bottom": "^1.1.0",
     "react-switch": "^3.0.4",
     "react-switch-button": "^2.3.5",
     "react-toastify": "^4.2.0",
