--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-scroll-to-bottom": "^1.1.0",
+    "react-sound": "^1.2.0",
     "react-switch": "^3.0.4",
     "react-switch-button": "^2.3.5",
     "react-toastify": "^4.2.0",
